[Tutorial] Updates Custom Stack tutorial