@@ -9,7 +9,7 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
 
 !!! note "Prerequisites"
     
-	- JDK 11+ - OpenJDK versions can be found [here](https://adoptopenjdk.net/).
+	- JDK 21+ - OpenJDK versions can be found [here](https://adoptopenjdk.net/).
 	- Maven 3.5+ - Maven version 3.5.3 can be found [here](https://maven.apache.org/docs/3.5.3/release-notes.html).
 
 ### Steps
@@ -17,237 +17,643 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
 1. Create Maven `pom.xml` files:
 
 	- Create new folder on your machine, for the custom stack _(e.g. `<my-custom-stack-path>/custom-stack`)_.
-	- Create `pom.xml` and `releng/pom.xml` files.
+	- Create `pom.xml` and `application/pom.xml` files.
 
 	=== "pom.xml"
 
 	    1. Create new `pom.xml` file.
 		1. Paste the following content:
 
-    	```xml hl_lines="65"
-    	<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-            <modelVersion>4.0.0</modelVersion>
+		??? abstract "pom.xml"
 
-            <parent>
-                <groupId>org.sonatype.oss</groupId>
-                <artifactId>oss-parent</artifactId>
-                <version>7</version>
-            </parent>
+			```xml hl_lines="229"
+			<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+				xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+				<modelVersion>4.0.0</modelVersion>
 
-            <name>Custom Stack - Parent</name>
-            <description>Custom Stack</description>
-            <groupId>io.dirigible.custom.stack</groupId>
-            <artifactId>custom-stack-parent</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <packaging>pom</packaging>
+				<parent>
+					<groupId>org.sonatype.oss</groupId>
+					<artifactId>oss-parent</artifactId>
+					<version>7</version>
+				</parent>
 
-            <modules>
-                <module>releng</module>
-            </modules>
+				<name>custom - stack - parent</name>
+				<description>Custom Stack - Sample</description>
+				<groupId>io.dirigible.samples</groupId>
+				<artifactId>custom-stack-parent</artifactId>
+				<version>1.0.0-SNAPSHOT</version>
+				<packaging>pom</packaging>
 
-            <profiles>
-                <profile>
-                    <id>default</id>
-                    <activation>
-                        <activeByDefault>true</activeByDefault>
-                    </activation>
-                    <build>
-                        <plugins>
-                            <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-compiler-plugin</artifactId>
-                                <version>${maven.compiler.plugin.version}</version>
-                                <configuration>
-                                    <source>${maven.compiler.source}</source>
-                                    <target>${maven.compiler.target}</target>
-                                    <debug>true</debug>
-                                    <debuglevel>lines,vars,source</debuglevel>
-                                </configuration>
-                            </plugin>
-                            <!-- 
-                                Note: Uncomment for git repositories, as this plugin would get the last commit id.
-                                This is needed for the info in the "About" view.
-                            -->
-                            <!--
-                            <plugin>
-                                <groupId>pl.project13.maven</groupId>
-                                <artifactId>git-commit-id-plugin</artifactId>
-                                <version>${git-commit-id-plugin.version}</version>
-                                <executions>
-                                    <execution>
-                                        <id>get-the-git-infos</id>
-                                        <goals>
-                                            <goal>revision</goal>
-                                        </goals>
-                                    </execution>
-                                </executions>
-                            </plugin>
-                            -->
-                        </plugins>
-                    </build>
-                </profile>
-            </profiles>
+				<inceptionYear>2024</inceptionYear>
 
-            <properties>
-                <dirigible.version>6.3.24</dirigible.version>
+				<url>https://www.dirigible.io</url>
+				<organization>
+					<name>Eclipse Foundation</name>
+					<url>https://www.eclipse.org</url>
+				</organization>
+				<scm>
+					<url>https://github.com/dirigiblelabs/sample-custom-stack</url>
+				</scm>
 
-                <java.version>11</java.version>
+				<modules>
+					<module>apis</module>
+					<module>application</module>
+					<module>branding</module>
+				</modules>
 
-                <spring.boot.version>2.7.2</spring.boot.version>
+				<dependencies>
 
-                <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
-                <maven.compiler.source>11</maven.compiler.source>
-                <maven.compiler.target>11</maven.compiler.target>
+					<!-- Platform -->
+					<dependency>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-api</artifactId>
+						<scope>compile</scope>
+					</dependency>
+					<dependency>
+						<groupId>ch.qos.logback</groupId>
+						<artifactId>logback-core</artifactId>
+						<scope>compile</scope>
+					</dependency>
+					<dependency>
+						<groupId>ch.qos.logback</groupId>
+						<artifactId>logback-classic</artifactId>
+						<scope>compile</scope>
+					</dependency>
 
-                <slf4j.version>1.7.36</slf4j.version>
-                <logback.version>1.2.11</logback.version>
-                <commons.lang3>3.12.0</commons.lang3>
+					<!-- Commons -->
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-commons-config</artifactId>
+					</dependency>
 
-                <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
-            </properties>
-        </project>
-    	```
+					<!-- Spring Boot -->
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-web</artifactId>
+						<exclusions>
+							<exclusion>
+								<groupId>org.apache.logging.log4j</groupId>
+								<artifactId>log4j-to-slf4j</artifactId>
+							</exclusion>
+						</exclusions>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-websocket</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-data-jdbc</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-data-jpa</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-security</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-validation</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-actuator</artifactId>
+					</dependency>
+
+					<dependency>
+						<groupId>org.springframework.security</groupId>
+						<artifactId>spring-security-web</artifactId>
+					</dependency>
+
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-test</artifactId>
+						<scope>test</scope>
+						<exclusions>
+						<exclusion>
+							<groupId>org.junit.vintage</groupId>
+							<artifactId>junit-vintage-engine</artifactId>
+						</exclusion>
+					</exclusions>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.security</groupId>
+						<artifactId>spring-security-test</artifactId>
+						<scope>test</scope>
+					</dependency>
+
+					<!-- Date Type Utils -->
+					<dependency>
+						<groupId>com.fasterxml.jackson.datatype</groupId>
+						<artifactId>jackson-datatype-joda</artifactId>
+					</dependency>
+
+					<!-- Swagger -->
+					<dependency>
+						<groupId>org.springdoc</groupId>
+						<artifactId>springdoc-openapi-ui</artifactId>
+						<version>${org.springdoc.openapi.ui.version}</version>
+					</dependency>
+
+					<!-- Data Access -->
+					<dependency>
+						<groupId>com.h2database</groupId>
+						<artifactId>h2</artifactId>
+					</dependency>
+
+					<!-- WebJars -->
+					<dependency>
+						<groupId>org.webjars</groupId>
+						<artifactId>webjars-locator</artifactId>
+						<version>${webjars-locator}</version>
+					</dependency>
+
+					<!-- Olingo -->
+					<dependency>
+						<groupId>org.apache.olingo</groupId>
+						<artifactId>olingo-odata2-lib</artifactId>
+						<version>${olingo.version}</version>
+						<type>pom</type>
+						<exclusions>
+							<exclusion>
+								<groupId>javax.ws.rs</groupId>
+								<artifactId>javax.ws.rs-api</artifactId>
+							</exclusion>
+						</exclusions>
+					</dependency>
+
+					<dependency>
+						<groupId>com.google.code.gson</groupId>
+						<artifactId>gson</artifactId>
+					</dependency>
+
+				</dependencies>
+
+				<dependencyManagement>
+					<dependencies>
+						<dependency>
+							<groupId>org.eclipse.dirigible</groupId>
+							<artifactId>dirigible-dependencies</artifactId>
+							<version>${dirigible.version}</version>
+							<type>pom</type>
+							<scope>import</scope>
+						</dependency>
+					</dependencies>
+				</dependencyManagement>
+
+				<profiles>
+					<profile>
+						<id>default</id>
+						<activation>
+							<activeByDefault>true</activeByDefault>
+						</activation>
+						<build>
+							<plugins>
+								<plugin>
+									<groupId>org.jacoco</groupId>
+									<artifactId>jacoco-maven-plugin</artifactId>
+									<version>${jacoco.version}</version>
+									<executions>
+										<execution>
+											<id>prepare-agent</id>
+											<goals>
+												<goal>prepare-agent</goal>
+											</goals>
+										</execution>
+									</executions>
+									<configuration>
+										<rules>
+											<rule>
+												<element>SOURCEFILE</element>
+												<excludes>
+													<exclude>*src/test/*</exclude>
+												</excludes>
+											</rule>
+										</rules>
+									</configuration>
+								</plugin>
+								<plugin>
+									<groupId>org.apache.maven.plugins</groupId>
+									<artifactId>maven-compiler-plugin</artifactId>
+									<version>${maven.compiler.plugin.version}</version>
+									<configuration>
+										<source>${maven.compiler.source}</source>
+										<target>${maven.compiler.target}</target>
+										<debug>true</debug>
+										<debuglevel>lines,vars,source</debuglevel>
+									</configuration>
+								</plugin>
+							</plugins>
+						</build>
+					</profile>
+				</profiles>
+
+				<properties>
+					<project.title>custom stack</project.title>
+
+					<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+					<dirigible.version>10.2.7</dirigible.version>
+
+					<java.version>17</java.version>
+					<maven.compiler.source>17</maven.compiler.source>
+					<maven.compiler.target>17</maven.compiler.target>
+
+					<maven.resource.plugin.version>3.3.0</maven.resource.plugin.version>
+					<maven.clean.plugin.version>3.2.0</maven.clean.plugin.version>
+					<maven.clean.plugin.directory>src/main/resources/META-INF/dirigible</maven.clean.plugin.directory>
+					<maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+					<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+					<maven.scm.plugin.version>1.13.0</maven.scm.plugin.version>
+					<scmVersionType>branch</scmVersionType>
+					<commons.io>2.11.0</commons.io>
+					<commons.codec>1.15</commons.codec>
+					<commons.lang3>3.12.0</commons.lang3>
+					<commons.exec>1.3</commons.exec>
+					<commons.text>1.10.0</commons.text>
+					<gson.version>2.10.1</gson.version>
+					<mockito.version>4.11.0</mockito.version>
+					<hamcrest.all.version>1.3</hamcrest.all.version>
+					<retrofit.version>1.8.0</retrofit.version>
+					<okhttp3.version>4.10.0</okhttp3.version>
+					<slf4j.version>1.7.36</slf4j.version>
+					<slf4j.simple.version>1.7.12</slf4j.simple.version>
+					<logback.version>1.4.5</logback.version>
+					<commons-dbcp2.version>2.9.0</commons-dbcp2.version>
+
+					<postgresql.version>42.7.0</postgresql.version>
+					<ngdbc.version>2.20.11</ngdbc.version>
+					<snowflake.version>3.15.0</snowflake.version>
+					
+					<activemq.version>5.17.3</activemq.version>
+					<jsr250-api.version>1.0</jsr250-api.version>
+					<jetty.version>9.4.48.v20220622</jetty.version>
+					<lucene.version>9.4.2</lucene.version>
+					<chemistry.version>1.1.0</chemistry.version>
+					<flowable.version>6.8.0</flowable.version>
+					<jaxb.version>2.3.0</jaxb.version>
+					<jaxws.version>2.3.3</jaxws.version>
+					<jakarta.ws.rs-api.version>2.1.5</jakarta.ws.rs-api.version>
+					<license-maven-plugin.version>4.3</license-maven-plugin.version>
+					<persistence.api.version>2.2.3</persistence.api.version>
+					<jgit.version>6.4.0.202211300538-r</jgit.version>
+					<javax.mail.api.version>1.6.4</javax.mail.api.version>
+					<olingo.version>2.0.13</olingo.version>
+					<kafka.version>3.3.1</kafka.version>
+					<git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
+					<mongodb.version>3.12.11</mongodb.version>
+					<caffeine.version>3.1.2</caffeine.version>
+					<liquibase-core.version>4.16.1</liquibase-core.version>
+					<commons-csv.version>1.9.0</commons-csv.version>
+					<jquery-ui.version>1.13.0</jquery-ui.version>
+					<sap-theming__theming-base-content.version>11.1.42</sap-theming__theming-base-content.version>
+					<fundamental-styles.version>0.24.4</fundamental-styles.version>
+					<angular-aria.version>1.8.2</angular-aria.version>
+					<split.js.version>1.6.5</split.js.version>
+					<diff.version>5.1.0</diff.version>
+					<monaco-editor.version>0.33.0</monaco-editor.version>
+					<requirejs.version>2.3.6</requirejs.version>
+					<jstree.version>3.3.12</jstree.version>
+					<jquery.version>3.6.0</jquery.version>
+					<jqplot.version>1.0.8r1250</jqplot.version>
+					<bootstrap.version>3.3.7</bootstrap.version>
+					<es5-shim.version>4.6.7</es5-shim.version>
+					<angular-file-upload.version>2.6.1</angular-file-upload.version>
+					<angularjs.version>1.8.2</angularjs.version>
+					<fontawesome.version>4.7.0</fontawesome.version>
+					<classgraph.version>4.8.154</classgraph.version>
+					<commons-compress.version>1.22</commons-compress.version>
+					<testcontainers.elasticsearch.version>1.17.6</testcontainers.elasticsearch.version>
+					<testcontainers.version>1.17.6</testcontainers.version>
+					<testcontainers.rabbitmq.version>1.17.6</testcontainers.rabbitmq.version>
+					<amqp.client.version>5.16.0</amqp.client.version>
+					<elasticsearch.client.version>7.7.1</elasticsearch.client.version>
+					<jetcd.core.version>0.7.5</jetcd.core.version>
+					<jetcd.test.version>0.5.4</jetcd.test.version>
+					<logcaptor.version>2.7.10</logcaptor.version>
+					<exec.maven.plugin>3.0.0</exec.maven.plugin>
+
+					<spring-context-support.version>5.3.24</spring-context-support.version>
+					<webjars-locator>0.51</webjars-locator>
+
+					<keycloak-adapter-bom.version>20.0.2</keycloak-adapter-bom.version>
+					<hikaricp.version>5.0.1</hikaricp.version>
+					<validator.version>1.7</validator.version>
+					<quartz.version>2.3.2</quartz.version>
+					<c3p0.version>0.9.5.5</c3p0.version>
+					<graalvm.version>22.3.1</graalvm.version>
+					<guava.version>31.1-jre</guava.version>
+					<icu4j.version>72.1</icu4j.version>
+					<commons-collections.version>3.2.2</commons-collections.version>
+					<commons-collections4.version>4.4</commons-collections4.version>
+					<velocity.version>2.3</velocity.version>
+					<wikitext.version>3.0.45.202211090110</wikitext.version>
+					<flexmark.version>0.64.0</flexmark.version>
+					<qldb.driver.version>2.3.1</qldb.driver.version>
+					<qldb.sdk.version>1.12.386</qldb.sdk.version>
+					<cassandra.version>1.17.6</cassandra.version>
+					<cassandra.driver.version>3.11.3</cassandra.driver.version>
+					<jedis.version>4.3.1</jedis.version>
+					<spark.version>3.3.1</spark.version>
+					<path-to-regexp.version>6.2.1</path-to-regexp.version>
+					<javax.websocket-api.version>1.1</javax.websocket-api.version>
+					<jacoco.version>0.8.11</jacoco.version>
+
+					<jakarta.validation.version>3.0.2</jakarta.validation.version>
+					<org.springdoc.openapi.ui.version>1.7.0</org.springdoc.openapi.ui.version>
+					<swagger-annotations.version>1.6.9</swagger-annotations.version>
+
+					<profile.content.phase>none</profile.content.phase>
+
+				</properties>
+			</project>
+			```
 
 		!!! tip "Eclipse Dirigible version"
 
-			The tutorial is using Eclipse Dirigible version `6.3.24` as highlighted on line **65**. To check for a more recent and stable version go to [Eclipse Dirigible Releases](https://github.com/eclipse/dirigible/releases/).
+			The tutorial is using Eclipse Dirigible version `10.2.7` as highlighted on line **229**. To check for a more recent and stable version go to [Eclipse Dirigible Releases](https://github.com/eclipse/dirigible/releases/).
 
-		!!! info "Git Repository"
+    === "application/pom.xml"
 
-			For git repositories uncomment the following lines, in order to receive the `Commit Id` information in the **About** view:
-
-			```xml
-			<!-- 
-			    Note: Uncomment for git repositories, as this plugin would get the last commit id.
-			    This is needed for the info in the "About" view.
-			-->
-			<!--
-			<plugin>
-			    <groupId>pl.project13.maven</groupId>
-			    <artifactId>git-commit-id-plugin</artifactId>
-			    <version>${git-commit-id-plugin.version}</version>
-			    <executions>
-			        <execution>
-			            <id>get-the-git-infos</id>
-			            <goals>
-			                <goal>revision</goal>
-			            </goals>
-			        </execution>
-			    </executions>
-			</plugin>
-			-->
-			```
-
-    === "releng/pom.xml"
-
-	    1. Create new folder `releng` and navigate to it.
-		1. Create new `releng/pom.xml` file.
+	    1. Create new folder `application` and navigate to it.
+		1. Create new `application/pom.xml` file.
 		1. Paste the following content:
 
-		```xml
-		<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-			<modelVersion>4.0.0</modelVersion>
+		??? abstract "application/pom.xml"
 
-		    <parent>
-		        <groupId>io.dirigible.custom.stack</groupId>
-		        <artifactId>custom-stack-parent</artifactId>
-		        <version>1.0.0-SNAPSHOT</version>
-		        <relativePath>../pom.xml</relativePath>
-		    </parent>
+			!!! info "Git Repository"
 
-			<name>Custom Stack - Releng - Spring Boot</name>
-			<artifactId>custom-stack-spring-boot</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-			<packaging>jar</packaging>
+				For git repositories uncomment the following lines, in order to receive the `Commit Id` information in the **About** view:
 
-			<build>
-				<plugins>
-					<plugin>
+				```xml
+				<!-- 
+					Note: Uncomment for git repositories, as this plugin would get the last commit id.
+					This is needed for the info in the "About" view.
+				-->
+				<!--
+				<plugin>
+					<groupId>pl.project13.maven</groupId>
+					<artifactId>git-commit-id-plugin</artifactId>
+					<version>${git-commit-id-plugin.version}</version>
+					<executions>
+						<execution>
+							<id>get-the-git-infos</id>
+							<goals>
+								<goal>revision</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				-->
+				```
+
+			```xml
+			<project xmlns="http://maven.apache.org/POM/4.0.0"
+					xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+					xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+				<modelVersion>4.0.0</modelVersion>
+
+				<parent>
+					<groupId>io.dirigible.samples</groupId>
+					<artifactId>custom-stack-parent</artifactId>
+					<version>1.0.0-SNAPSHOT</version>
+					<relativePath>../pom.xml</relativePath>
+				</parent>
+
+				<name>custom - stack - application</name>
+				<artifactId>custom-stack-application</artifactId>
+				<packaging>jar</packaging>
+
+
+				<dependencies>
+					<dependency>
+						<groupId>io.dirigible.samples</groupId>
+						<artifactId>custom-stack-apis</artifactId>
+						<version>1.0.0-SNAPSHOT</version>
+					</dependency>
+					<dependency>
+						<groupId>io.dirigible.samples</groupId>
+						<artifactId>custom-stack-branding</artifactId>
+						<version>1.0.0-SNAPSHOT</version>
+					</dependency>
+
+					<!-- Core -->
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-components-group-core</artifactId>
+						<type>pom</type>
+						<exclusions>
+							<exclusion>
+								<groupId>com.zaxxer</groupId>
+								<artifactId>HikariCP-java7</artifactId>
+							</exclusion>
+						</exclusions>
+					</dependency>
+					
+					<!-- Security -->
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-components-security-basic</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-components-security-keycloak</artifactId>
+					</dependency>
+					
+					<!-- Data -->
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-components-group-database</artifactId>
+						<type>pom</type>
+					</dependency>
+					
+					<!-- Engine -->
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-components-group-engines</artifactId>
+						<type>pom</type>
+						<exclusions>
+							<exclusion>
+								<groupId>javax.validation</groupId>
+								<artifactId>validation-api</artifactId>
+							</exclusion>
+							<exclusion>
+								<groupId>javax.servlet</groupId>
+								<artifactId>javax.servlet-api</artifactId>
+							</exclusion>
+							<exclusion>
+								<groupId>org.apache.cxf</groupId>
+								<artifactId>cxf-rt-frontend-jaxrs</artifactId>
+							</exclusion>
+							<exclusion>
+								<groupId>org.apache.cxf</groupId>
+								<artifactId>
+									cxf-spring-boot-starter-jaxrs
+								</artifactId>
+							</exclusion>
+						</exclusions>
+					</dependency>
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-components-engine-command</artifactId>
+					</dependency>
+					
+					<!-- IDE -->
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-components-group-ide</artifactId>
+						<type>pom</type>
+						<exclusions>
+							<exclusion>
+								<groupId>org.eclipse.dirigible</groupId>
+								<artifactId>dirigible-components-ide-ui-branding</artifactId>
+							</exclusion>
+						</exclusions>
+					</dependency>
+					
+					<!-- API -->
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-components-group-api</artifactId>
+						<type>pom</type>
+					</dependency>
+					
+					<!-- Resources -->
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-components-group-resources</artifactId>
+						<type>pom</type>
+					</dependency>
+
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-components-security-oauth2</artifactId>
+					</dependency>
+					
+					<!-- Templates -->
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-components-group-templates</artifactId>
+						<type>pom</type>
+					</dependency>
+					
+					<dependency>
 						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-maven-plugin</artifactId>
-						<version>${spring.boot.version}</version>
-						<configuration>
-							<mainClass>io.dirigible.custom.platform.CustomPlatformApplication</mainClass>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>repackage</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-				<resources>
-					<resource>
-						<directory>src/main/resources</directory>
-						<filtering>true</filtering>
-					</resource>
-				</resources>
-			</build>
+						<artifactId>spring-boot-starter-validation</artifactId>
+					</dependency>
 
-			<dependencies>
+					<dependency>
+						<groupId>com.codeborne</groupId>
+						<artifactId>selenide</artifactId>
+						<version>7.2.2</version>
+						<scope>test</scope>
+					</dependency>
 
-				<!-- Dirigible -->
-				<dependency>
-					<groupId>org.eclipse.dirigible</groupId>
-					<artifactId>dirigible-server-spring</artifactId>
-					<version>${dirigible.version}</version>
-				</dependency>
+					<!-- Drivers -->
+					<dependency>
+						<groupId>org.postgresql</groupId>
+						<artifactId>postgresql</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-database-mongodb-jdbc</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>com.sap.cloud.db.jdbc</groupId>
+						<artifactId>ngdbc</artifactId>
+						<version>${ngdbc.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>net.snowflake</groupId>
+						<artifactId>snowflake-jdbc</artifactId>
+						<version>${snowflake.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.eclipse.dirigible</groupId>
+						<artifactId>dirigible-tests-framework</artifactId>
+					</dependency>
 
-				<!-- Platform -->
-				<dependency>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-api</artifactId>
-					<version>${slf4j.version}</version>
-					<scope>compile</scope>
-				</dependency>
-				<dependency>
-					<groupId>ch.qos.logback</groupId>
-					<artifactId>logback-core</artifactId>
-					<version>${logback.version}</version>
-					<scope>compile</scope>
-				</dependency>
-				<dependency>
-					<groupId>ch.qos.logback</groupId>
-					<artifactId>logback-classic</artifactId>
-					<version>${logback.version}</version>
-					<scope>compile</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-configuration-processor</artifactId>
-					<optional>true</optional>
-					<version>${spring.boot.version}</version>
-				</dependency>
+				</dependencies>
 
-			</dependencies>
-		
-		</project>
-		```
+				<build>
+					<plugins>
+						<plugin>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-maven-plugin</artifactId>
+							<configuration>
+								<mainClass>io.dirigible.samples.CustomStackApplication</mainClass>
+							</configuration>
+							<executions>
+								<execution>
+									<goals>
+										<goal>repackage</goal>
+									</goals>
+								</execution>
+							</executions>
+						</plugin>
+						<!-- 
+							Note: Uncomment for git repositories, as this plugin would get the last commit id.
+							This is needed for the info in the "About" view.
+						-->
+						<!--
+						<plugin>
+							<groupId>pl.project13.maven</groupId>
+							<artifactId>git-commit-id-plugin</artifactId>
+							<version>${git-commit-id-plugin.version}</version>
+							<executions>
+								<execution>
+									<id>get-the-git-infos</id>
+									<goals>
+										<goal>revision</goal>
+									</goals>
+								</execution>
+							</executions>
+							<configuration>
+								<dotGitDirectory>../.git</dotGitDirectory>
+							</configuration>
+						</plugin>
+						-->
+					</plugins>
+					<resources>
+						<resource>
+							<directory>src/main/resources</directory>
+							<filtering>true</filtering>
+						</resource>
+					</resources>
+				</build>
+
+			</project>
+			```
 
 1. Create Eclipse Dirigible resources:
 
-    - Navigate to the `releng` folder.
+    - Navigate to the `application` folder.
 	- Create `src/main/resources/` folder structure and navigate to it.
 	- Create `dirigible.properties`, `index.html` and `index-busy.html` files.
 
-	=== "dirigible.properties"
+    === "dirigible.properties"
 
-		1. Create `releng/src/main/resources/dirigible.properties` file.
+		1. Create `application/src/main/resources/dirigible.properties` file.
 		1. Paste the following content:
 
-		```
-		DIRIGIBLE_PRODUCT_NAME=Custom Platform
-		DIRIGIBLE_PRODUCT_VERSION=${project.version}
-		DIRIGIBLE_PRODUCT_COMMIT_ID=${git.commit.id}
-		DIRIGIBLE_PRODUCT_REPOSITORY=https://github.com/eclipse/dirigible
-		DIRIGIBLE_PRODUCT_TYPE=custom
-		DIRIGIBLE_INSTANCE_NAME=custom-platform-spring-boot
-		DIRIGIBLE_DATABASE_PROVIDER=local
-		DIRIGIBLE_JAVASCRIPT_HANDLER_CLASS_NAME=org.eclipse.dirigible.graalium.handler.GraaliumJavascriptHandler
-		DIRIGIBLE_GRAALIUM_ENABLE_DEBUG=true
-		```
+		??? abstract "application/src/main/resources/dirigible.properties"
+
+			```
+			# General
+			DIRIGIBLE_PRODUCT_NAME=${project.title}
+			DIRIGIBLE_PRODUCT_VERSION=${project.version}
+			DIRIGIBLE_PRODUCT_COMMIT_ID=${git.commit.id}
+			DIRIGIBLE_PRODUCT_REPOSITORY=https://github.com/dirigiblelabs/sample-custom-stack
+			DIRIGIBLE_PRODUCT_TYPE=all
+			DIRIGIBLE_INSTANCE_NAME=custom-stack
+			DIRIGIBLE_DATABASE_PROVIDER=local
+			DIRIGIBLE_JAVASCRIPT_HANDLER_CLASS_NAME=org.eclipse.dirigible.graalium.handler.GraaliumJavascriptHandler
+			DIRIGIBLE_GRAALIUM_ENABLE_DEBUG=true
+			DIRIGIBLE_HOME_URL=services/web/ide/
+			DIRIGIBLE_FTP_PORT=22
+			```
 
 		!!! info "Environment Variables"
 
@@ -276,7 +682,7 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
     === "static/index-busy.html"
 
 		1. Create `static` folder and navigate to it.
-		1. Create `releng/src/main/resources/static/index-busy.html` file.
+		1. Create `application/src/main/resources/static/index-busy.html` file.
 		1. Paste the following content:
 
 		```html
@@ -287,13 +693,13 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
 				<meta charset="utf-8">
 				<meta http-equiv="X-UA-Compatible" content="IE=edge">
 				<meta name="viewport" content="width=device-width, initial-scale=1">
-				<link rel="icon" href="/services/v4/web/resources/images/favicon.ico" />
+				<link rel="icon" href="/services/web/resources/images/favicon.ico" />
 				<title>Loading ...</title>
 				<theme></theme>
-				<script type="text/javascript" src="/services/v4/js/resources-core/services/loader.js?id=application-view-js">
+				<script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=application-view-js">
 				</script>
 				<link type="text/css" rel="stylesheet"
-					href="/services/v4/js/resources-core/services/loader.js?id=application-view-css" />
+					href="/services/js/resources-core/services/loader.js?id=application-view-css" />
 			</head>
 
 			<body class="fd-scrollbar" dg-contextmenu="contextMenuContent">
@@ -301,7 +707,7 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
 				<div style="padding-left: 10rem; padding-right: 10rem; margin-top: 3rem;">
 					<div class="fd-panel fd-panel--fixed">
 						<div class="fd-panel__header">
-							<h4 class="fd-panel__title">Preparing your Custom Platform environment</h4>
+							<h4 class="fd-panel__title">Preparing Custom Stack Instance</h4>
 						</div>
 					</div>
 					<fd-list>
@@ -322,7 +728,7 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
 
 							$http({
 								method: 'GET',
-								url: '/services/v4/healthcheck'
+								url: '/services/healthcheck'
 							}).then(function(healthStatus){
 								if (healthStatus.data.status === "Ready") {
 									window.location='/home';
@@ -361,13 +767,13 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
 
 1. _(optional)_ Create Eclipse Dirigible error resources:
 
-    - Navigate to the `releng/src/main/resources` folder.
+    - Navigate to the `application/src/main/resources` folder.
 	- Create `public` folder and navigate to it.
 	- Create `error.html`, `403.html` and `404.html` files.
 
     === "error.html"
 
-	    - Create `releng/src/main/resources/public/error/error.html` file.
+	    - Create `application/src/main/resources/public/error/error.html` file.
 		- Paste the following content:
 
 		```html
@@ -378,13 +784,13 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
 				<meta charset="utf-8">
 				<meta http-equiv="X-UA-Compatible" content="IE=edge">
 				<meta name="viewport" content="width=device-width, initial-scale=1">
-				<link rel="icon" href="/services/v4/web/resources/images/favicon.ico" />
-				<title>Custom Platform | Unexpected Error Occurred</title>
+				<link rel="icon" href="/services/web/resources/images/favicon.ico" />
+				<title>Custom Stack | Unexpected Error Occurred</title>
 				<theme></theme>
-				<script type="text/javascript" src="/services/v4/js/resources-core/services/loader.js?id=application-view-js">
+				<script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=application-view-js">
 				</script>
 				<link type="text/css" rel="stylesheet"
-					href="/services/v4/js/resources-core/services/loader.js?id=application-view-css" />
+					href="/services/js/resources-core/services/loader.js?id=application-view-css" />
 			</head>
 
 			<body class="fd-scrollbar" dg-contextmenu="contextMenuContent">
@@ -434,7 +840,7 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
     === "403.html"
 
 	    - Create `error` folder and navigate to it. 
-		- Create `releng/src/main/resources/error/403.html` file.
+		- Create `application/src/main/resources/error/403.html` file.
 		- Paste the following content:
 
 		```html
@@ -445,13 +851,13 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
 				<meta charset="utf-8">
 				<meta http-equiv="X-UA-Compatible" content="IE=edge">
 				<meta name="viewport" content="width=device-width, initial-scale=1">
-				<link rel="icon" href="/services/v4/web/resources/images/favicon.ico" />
-				<title>Custom Platform | Access Denied</title>
+				<link rel="icon" href="/services/web/resources/images/favicon.ico" />
+				<title>Custom Stack | Access Denied</title>
 				<theme></theme>
-				<script type="text/javascript" src="/services/v4/js/resources-core/services/loader.js?id=application-view-js">
+				<script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=application-view-js">
 				</script>
 				<link type="text/css" rel="stylesheet"
-					href="/services/v4/js/resources-core/services/loader.js?id=application-view-css" />
+					href="/services/js/resources-core/services/loader.js?id=application-view-css" />
 			</head>
 
 			<body class="fd-scrollbar" dg-contextmenu="contextMenuContent">
@@ -482,7 +888,7 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
     === "404.html"
 
 	    - Create `error` folder and navigate to it. 
-		- Create `releng/src/main/resources/error/404.html` file.
+		- Create `application/src/main/resources/error/404.html` file.
 		- Paste the following content:
 
 		```html
@@ -493,13 +899,13 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
 				<meta charset="utf-8">
 				<meta http-equiv="X-UA-Compatible" content="IE=edge">
 				<meta name="viewport" content="width=device-width, initial-scale=1">
-				<link rel="icon" href="/services/v4/web/resources/images/favicon.ico" />
-				<title>Custom Platform | Page Not Found</title>
+				<link rel="icon" href="/services/web/resources/images/favicon.ico" />
+				<title>Custom Stack | Page Not Found</title>
 				<theme></theme>
-				<script type="text/javascript" src="/services/v4/js/resources-core/services/loader.js?id=application-view-js">
+				<script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=application-view-js">
 				</script>
 				<link type="text/css" rel="stylesheet"
-					href="/services/v4/js/resources-core/services/loader.js?id=application-view-css" />
+					href="/services/js/resources-core/services/loader.js?id=application-view-css" />
 			</head>
 
 			<body class="fd-scrollbar" dg-contextmenu="contextMenuContent">
@@ -547,104 +953,136 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
 
 1. Create Spring Boot files:
 
-    - Navigate to the `releng` folder.
-	- Create `application.yaml` and `CustomPlatformApplication.java` files.
+    - Navigate to the `application` folder.
+	- Create `application.properties`, `application-keycloak.properties` and `CustomStackApplication.java` files.
 
-    === "application.yaml"
+    === "application.properties"
 
 		1. Navigate to the `src/main/resources/` folder.
-		1. Create `releng/src/main/resources/application.yaml` file.
+		1. Create `application/src/main/resources/application.properties` file.
 		1. Paste the following content:
 
-		```yaml
-		cxf:
-		  path: /services/v4
-		  jaxrs:
-		    client:
-		      headers:
-		        accept: text/plain
-		      classes-scan-packages: org.eclipse.dirigible
-		      address: http://localhost:8080/services/v4
+		```
+		server.port=8080
 
-		keycloak:
-		  enabled: ${DIRIGIBLE_KEYCLOAK_ENABLED:false}
-		  realm: ${DIRIGIBLE_KEYCLOAK_REALM}
-		  auth-server-url: ${DIRIGIBLE_KEYCLOAK_AUTH_SERVER_URL}
-		  ssl-required: ${DIRIGIBLE_KEYCLOAK_SSL_REQUIRED:external}
-		  resource: ${DIRIGIBLE_KEYCLOAK_CLIENT_ID}
-		  public-client: true
-		  principal-attribute: "preferred_username"
-		  confidential-port: ${DIRIGIBLE_KEYCLOAK_CONFIDENTIAL_PORT:443}
-		  use-resource-role-mappings: true
-		  securityConstraints:
-		    - securityCollections:
-		      - name: Landing Page
-		        patterns: [/, /home, /index.html]
-		      authRoles: [Everyone]
-		    - securityCollections:
-		      - name: Themes
-		        patterns: [/services/v4/core/theme/*, /services/v4/web/resources/*]
-		    - securityCollections:
-		      - name: Public Engine Services
-		        patterns: [/public/v4/web/*, /public/v4/js/*, /public/v4/wiki/*, /public/v4/command/*]
-		    - securityCollections:
-		      - name: IDE Services
-		        patterns: [/services/v4/ide/*, /websockets/v4/ide/*]
-		      authRoles: [Developer]
-		    - securityCollections:
-		      - name: Core Services
-		        patterns: [/services/v4/core/*, /websockets/v4/core/*]
-		      authRoles: [Operator]
-		    - securityCollections:
-		      - name: Operations Services
-		        patterns: [/services/v4/ops/*, /websockets/v4/ops/*]
-		      authRoles: [Operator]
-		    - securityCollections:
-		      - name: Transport Services
-		        patterns: [/services/v4/transport/*]
-		      authRoles: [Operator]
+		spring.main.allow-bean-definition-overriding=true
+		server.error.include-message=always
+
+		spring.servlet.multipart.enabled=true
+		spring.servlet.multipart.file-size-threshold=2KB
+		spring.servlet.multipart.max-file-size=1GB
+		spring.servlet.multipart.max-request-size=1GB
+		spring.servlet.multipart.max-file-size=200MB
+		spring.servlet.multipart.max-request-size=215MB
+		spring.servlet.multipart.location=${java.io.tmpdir}
+
+		spring.datasource.hikari.connectionTimeout=3600000
+		spring.mvc.async.request-timeout=3600000
+
+		basic.enabled=${DIRIGIBLE_BASIC_ENABLED:true}
+
+		terminal.enabled=${DIRIGIBLE_TERMINAL_ENABLED:false}
+
+		keycloak.enabled=${DIRIGIBLE_KEYCLOAK_ENABLED:false}
+		keycloak.realm=${DIRIGIBLE_KEYCLOAK_REALM:null}
+		keycloak.auth-server-url=${DIRIGIBLE_KEYCLOAK_AUTH_SERVER_URL:null}
+		keycloak.ssl-required=${DIRIGIBLE_KEYCLOAK_SSL_REQUIRED:external}
+		keycloak.resource=${DIRIGIBLE_KEYCLOAK_CLIENT_ID:null}
+		keycloak.public-client=true
+		keycloak.principal-attribute=preferred_username
+		keycloak.confidential-port=${DIRIGIBLE_KEYCLOAK_CONFIDENTIAL_PORT:443}
+		keycloak.use-resource-role-mappings=true
+
+		management.metrics.mongo.command.enabled=false
+		management.metrics.mongo.connectionpool.enabled=false
+
+		management.endpoints.jmx.exposure.include=*
+		management.endpoints.jmx.exposure.exclude=
+		management.endpoints.web.exposure.include=*
+		management.endpoints.web.exposure.exclude=
+		management.endpoint.health.show-details=always
+
+		springdoc.api-docs.path=/api-docs
+
+		cxf.path=/odata/v2
+
+		# the following are used to force the Spring to create QUARTZ tables
+		# quartz properties are manged in quartz.properties don't try to add them here
+		spring.quartz.job-store-type=jdbc
+		spring.quartz.jdbc.initialize-schema=always
 		```
 
-    === "CustomPlatformApplication.java"
+    === "application-keycloak.properties"
+
+		1. Navigate to the `src/main/resources/` folder.
+		1. Create `application/src/main/resources/application.properties` file.
+		1. Paste the following content:
+
+		```
+		basic.enabled=false
+
+		# example https://keycloak.apps.dirigible.io/auth/realms/dirigible
+		spring.security.oauth2.client.provider.keycloak.issuer-uri=${DIRIGIBLE_KEYCLOAK_AUTH_SERVER_URL}
+
+		spring.security.oauth2.client.registration.keycloak.provider=keycloak
+		spring.security.oauth2.client.registration.keycloak.client-id=${DIRIGIBLE_KEYCLOAK_CLIENT_ID}
+		spring.security.oauth2.client.registration.keycloak.scope=openid,profile,roles,microprofile-jwt,email,phone,web-origins,address,offline_access
+		spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+
+		spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+		```
+
+    === "CustomStackApplication.java"
 
 		1. Navigate to the `src/main` folder.
-		1. Create `java/io/dirigible/custom/platform/` and navigate to it.
-		1. Create `releng/src/main/java/io/dirigible/custom/platform/CustomPlatformApplication.java` file.
+		1. Create `java/io/dirigible/samples/` and navigate to it.
+		1. Create `application/src/main/java/io/dirigible/samples/CustomStackApplication.java` file.
 		1. Paste the following content:
 
 		```java
-		package io.dirigible.custom.platform;
+		package io.dirigible.samples;
 
-		import org.eclipse.dirigible.DirigibleSpringConfiguration;
 		import org.springframework.boot.SpringApplication;
 		import org.springframework.boot.autoconfigure.SpringBootApplication;
+		import org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration;
+		import org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration;
+		import org.springframework.boot.autoconfigure.jdbc.JdbcTemplateAutoConfiguration;
+		import org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration;
+		import org.springframework.data.jpa.repository.config.EnableJpaAuditing;
+		import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
+		import org.springframework.scheduling.annotation.EnableScheduling;
 
-		@SpringBootApplication
-		public class CustomPlatformApplication extends DirigibleSpringConfiguration {
-
+		@EnableJpaAuditing
+		@EnableJpaRepositories
+		@SpringBootApplication(scanBasePackages = {"io.dirigible.samples", "org.eclipse.dirigible.components"},
+			exclude = {DataSourceAutoConfiguration.class, DataSourceTransactionManagerAutoConfiguration.class,
+				HibernateJpaAutoConfiguration.class, JdbcTemplateAutoConfiguration.class})
+		@EnableScheduling
+		public class CustomStackApplication {
+			
 			public static void main(String[] args) {
-				SpringApplication.run(CustomPlatformApplication.class, args);
+				SpringApplication.run(CustomStackApplication.class, args);
 			}
 
 		}
 		```
 
-1. Build the _Custom Platform_.
+1. Build the _Custom Stack_.
 
     - Navigate to the root folder of the project _(e.g. `<my-custom-stack-path>/custom-stack`)_.
-	- Open the **Terminal** and execute the following command to build the _Custom Platform_:
+	- Open the **Terminal** and execute the following command to build the _Custom Stack_:
 
 	    ```
 		mvn clean install
 		```
 
-1. Run the _Custom Platform_.
+1. Run the _Custom Stack_.
 
-    - Navigate to the `releng/target` folder.
-	- Open the **Terminal** and execute the following command to run the _Custom Platform_:
+    - Navigate to the root folder of the project _(e.g. `<my-custom-stack-path>/custom-stack`)_.
+	- Open the **Terminal** and execute the following command to run the _Custom Stack_:
 
 	    ```
-		java -jar custom-stack-spring-boot-*.jar
+		java --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED -jar application/target/custom-stack-application-*.jar
 		```
 
 		!!! info "Debugging"
@@ -652,7 +1090,7 @@ This tutorial will guide you through the creation of a custom Eclipse Dirigible 
 			To run in debug mode, execute the following command:
 
 			```
-			java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000 -jar custom-stack-spring-boot-*.jar
+			java --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000 -jar application/target/custom-stack-application-*.jar
 			```
 
 	- Go to [http://localhost:8080](http://localhost:8080/) to access the _Custom Stack_.
